--- a/vgg16_cifar10.ipynb
+++ b/vgg16_cifar10.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
        "[PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,9 +47,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-03-20 21:15:25.654111: I metal_plugin/src/device/metal_device.cc:1154] Metal device set to: Apple M1 Pro\n",
+      "2024-03-20 21:15:25.654138: I metal_plugin/src/device/metal_device.cc:296] systemMemory: 16.00 GB\n",
+      "2024-03-20 21:15:25.654142: I metal_plugin/src/device/metal_device.cc:313] maxCacheSize: 5.33 GB\n",
+      "2024-03-20 21:15:25.654178: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:306] Could not identify NUMA node of platform GPU ID 0, defaulting to 0. Your kernel may not have been built with NUMA support.\n",
+      "2024-03-20 21:15:25.654196: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:272] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:0 with 0 MB memory) -> physical PluggableDevice (device: 0, name: METAL, pci bus id: <undefined>)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -63,64 +74,65 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-03-19 19:21:20.214782: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:114] Plugin optimizer for device_type GPU is enabled.\n"
+      "2024-03-20 21:15:26.540484: W tensorflow/tsl/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n",
+      "2024-03-20 21:15:27.087398: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:114] Plugin optimizer for device_type GPU is enabled.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "391/391 [==============================] - ETA: 0s - loss: 1.8882 - accuracy: 0.5075"
+      "1563/1563 [==============================] - ETA: 0s - loss: 2.0657 - accuracy: 0.5969"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-03-19 19:23:15.227798: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:114] Plugin optimizer for device_type GPU is enabled.\n"
+      "2024-03-20 21:17:41.658619: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:114] Plugin optimizer for device_type GPU is enabled.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "391/391 [==============================] - 122s 309ms/step - loss: 1.8882 - accuracy: 0.5075 - val_loss: 0.8141 - val_accuracy: 0.7766 - lr: 3.2258e-05\n",
+      "1563/1563 [==============================] - 143s 91ms/step - loss: 2.0657 - accuracy: 0.5969 - val_loss: 1.0813 - val_accuracy: 0.7998 - lr: 3.2258e-05\n",
       "\n",
       "Epoch 2: LearningRateScheduler setting learning rate to 3.2258064516129034e-05.\n",
       "Epoch 2/10\n",
-      "391/391 [==============================] - 123s 315ms/step - loss: 0.8413 - accuracy: 0.7859 - val_loss: 0.5809 - val_accuracy: 0.8505 - lr: 3.2258e-05\n",
+      "1563/1563 [==============================] - 141s 90ms/step - loss: 1.9045 - accuracy: 0.7739 - val_loss: 3.8308 - val_accuracy: 0.7330 - lr: 3.2258e-05\n",
       "\n",
       "Epoch 3: LearningRateScheduler setting learning rate to 3.2258064516129034e-05.\n",
       "Epoch 3/10\n",
-      "391/391 [==============================] - 123s 315ms/step - loss: 0.6416 - accuracy: 0.8437 - val_loss: 0.4949 - val_accuracy: 0.8821 - lr: 3.2258e-05\n",
+      "1563/1563 [==============================] - 141s 90ms/step - loss: 1.5923 - accuracy: 0.8184 - val_loss: 1.6739 - val_accuracy: 0.8185 - lr: 3.2258e-05\n",
       "\n",
       "Epoch 4: LearningRateScheduler setting learning rate to 3.2258064516129034e-05.\n",
       "Epoch 4/10\n",
-      "391/391 [==============================] - 123s 315ms/step - loss: 0.7113 - accuracy: 0.8660 - val_loss: 0.9719 - val_accuracy: 0.8277 - lr: 3.2258e-05\n",
+      "1563/1563 [==============================] - 141s 90ms/step - loss: 1.1416 - accuracy: 0.8577 - val_loss: 0.9429 - val_accuracy: 0.8623 - lr: 3.2258e-05\n",
       "\n",
       "Epoch 5: LearningRateScheduler setting learning rate to 3.2258064516129034e-05.\n",
       "Epoch 5/10\n",
-      "391/391 [==============================] - 123s 315ms/step - loss: 0.7114 - accuracy: 0.8838 - val_loss: 0.7148 - val_accuracy: 0.8946 - lr: 3.2258e-05\n",
+      "1563/1563 [==============================] - 142s 91ms/step - loss: 0.7178 - accuracy: 0.8926 - val_loss: 0.9094 - val_accuracy: 0.8632 - lr: 3.2258e-05\n",
       "\n",
       "Epoch 6: LearningRateScheduler setting learning rate to 3.2258064516129034e-05.\n",
       "Epoch 6/10\n",
-      "391/391 [==============================] - 123s 316ms/step - loss: 0.7408 - accuracy: 0.8973 - val_loss: 0.9177 - val_accuracy: 0.8933 - lr: 3.2258e-05\n",
+      "1563/1563 [==============================] - 140s 90ms/step - loss: 0.6085 - accuracy: 0.9023 - val_loss: 0.9574 - val_accuracy: 0.8667 - lr: 3.2258e-05\n",
       "\n",
       "Epoch 7: LearningRateScheduler setting learning rate to 3.2258064516129034e-05.\n",
       "Epoch 7/10\n",
-      "391/391 [==============================] - 124s 316ms/step - loss: 0.6410 - accuracy: 0.9128 - val_loss: 0.9803 - val_accuracy: 0.9020 - lr: 3.2258e-05\n",
+      "1563/1563 [==============================] - 142s 91ms/step - loss: 0.5331 - accuracy: 0.9159 - val_loss: 0.5762 - val_accuracy: 0.9032 - lr: 3.2258e-05\n",
       "\n",
       "Epoch 8: LearningRateScheduler setting learning rate to 3.2258064516129034e-05.\n",
       "Epoch 8/10\n",
-      "391/391 [==============================] - 124s 316ms/step - loss: 0.8233 - accuracy: 0.9132 - val_loss: 0.8602 - val_accuracy: 0.9074 - lr: 3.2258e-05\n",
+      "1563/1563 [==============================] - 141s 90ms/step - loss: 0.4568 - accuracy: 0.9274 - val_loss: 1.2106 - val_accuracy: 0.8702 - lr: 3.2258e-05\n",
       "\n",
       "Epoch 9: LearningRateScheduler setting learning rate to 3.2258064516129034e-05.\n",
       "Epoch 9/10\n",
-      "391/391 [==============================] - 122s 312ms/step - loss: 0.5967 - accuracy: 0.9367 - val_loss: 1.3968 - val_accuracy: 0.9054 - lr: 3.2258e-05\n",
+      "1563/1563 [==============================] - 141s 90ms/step - loss: 0.3290 - accuracy: 0.9406 - val_loss: 0.9323 - val_accuracy: 0.8837 - lr: 3.2258e-05\n",
       "\n",
       "Epoch 10: LearningRateScheduler setting learning rate to 3.2258064516129034e-05.\n",
       "Epoch 10/10\n",
-      "391/391 [==============================] - 120s 307ms/step - loss: 0.6343 - accuracy: 0.9379 - val_loss: 1.1752 - val_accuracy: 0.9178 - lr: 3.2258e-05\n"
+      "1563/1563 [==============================] - 142s 91ms/step - loss: 0.2184 - accuracy: 0.9539 - val_loss: 0.8108 - val_accuracy: 0.8858 - lr: 3.2258e-05\n"
      ]
     }
    ],
@@ -173,7 +185,7 @@
     "    model.compile(optimizer='adam', loss='categorical_crossentropy',\n",
     "                  metrics=['accuracy'])\n",
     "    model.fit(x=X_p, y=Y_p,\n",
-    "              batch_size=128,\n",
+    "              batch_size=32,\n",
     "              validation_data=(Xv_p, Yv_p),\n",
     "              epochs=10, shuffle=True,\n",
     "              callbacks=callback,\n",
@@ -183,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,57 +206,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  4/313 [..............................] - ETA: 7s "
+      "  5/313 [..............................] - ETA: 5s "
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-03-19 19:41:48.044096: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:114] Plugin optimizer for device_type GPU is enabled.\n"
+      "2024-03-20 21:40:15.690843: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:114] Plugin optimizer for device_type GPU is enabled.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "313/313 [==============================] - 7s 22ms/step\n",
+      "313/313 [==============================] - 7s 21ms/step\n",
       "Confusion Matrix:\n",
-      "[[911   2  13   3   4   0   6  16  24  21]\n",
-      " [ 10 905   0   0   0   0   3   1  10  71]\n",
-      " [ 37   0 844  21  32  23  23  15   5   0]\n",
-      " [  7   3  30 711  25 162  31  20   5   6]\n",
-      " [  8   1  24  15 867  23  29  30   3   0]\n",
-      " [  1   0   9  88  18 848   7  27   0   2]\n",
-      " [  6   0  16  32   6  10 921   6   1   2]\n",
-      " [  6   0   7   8  25  37   1 912   2   2]\n",
-      " [ 27   3   5   5   0   1   3   2 947   7]\n",
-      " [ 12  13   0   2   0   2   0   2  14 955]]\n",
+      "[[926  11  16   3   2   2   1   7  26   6]\n",
+      " [  3 978   0   0   1   0   0   0   6  12]\n",
+      " [ 18   0 906  12  20  21   6  15   1   1]\n",
+      " [  7   1  31 731  23 158  15  24   8   2]\n",
+      " [  4   2  35  12 891  11   9  33   3   0]\n",
+      " [  2   0  15  42  12 898   5  24   1   1]\n",
+      " [  6   1  29  21   8  18 910   3   2   2]\n",
+      " [  5   1   7   2  15  16   0 953   1   0]\n",
+      " [ 23   7   6   0   0   1   0   3 958   2]\n",
+      " [ 13  81   0   4   1   1   0   2  17 881]]\n",
       "\n",
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.89      0.91      0.90      1000\n",
-      "           1       0.98      0.91      0.94      1000\n",
-      "           2       0.89      0.84      0.87      1000\n",
-      "           3       0.80      0.71      0.75      1000\n",
-      "           4       0.89      0.87      0.88      1000\n",
-      "           5       0.77      0.85      0.81      1000\n",
-      "           6       0.90      0.92      0.91      1000\n",
-      "           7       0.88      0.91      0.90      1000\n",
-      "           8       0.94      0.95      0.94      1000\n",
-      "           9       0.90      0.95      0.92      1000\n",
+      "           0       0.92      0.93      0.92      1000\n",
+      "           1       0.90      0.98      0.94      1000\n",
+      "           2       0.87      0.91      0.89      1000\n",
+      "           3       0.88      0.73      0.80      1000\n",
+      "           4       0.92      0.89      0.90      1000\n",
+      "           5       0.80      0.90      0.84      1000\n",
+      "           6       0.96      0.91      0.94      1000\n",
+      "           7       0.90      0.95      0.92      1000\n",
+      "           8       0.94      0.96      0.95      1000\n",
+      "           9       0.97      0.88      0.92      1000\n",
       "\n",
-      "    accuracy                           0.88     10000\n",
-      "   macro avg       0.88      0.88      0.88     10000\n",
-      "weighted avg       0.88      0.88      0.88     10000\n",
+      "    accuracy                           0.90     10000\n",
+      "   macro avg       0.91      0.90      0.90     10000\n",
+      "weighted avg       0.91      0.90      0.90     10000\n",
       "\n"
      ]
     }
