--- a/vgg16_cifar10.ipynb
+++ b/vgg16_cifar10.ipynb
@@ -47,26 +47,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-03-20 21:15:25.654111: I metal_plugin/src/device/metal_device.cc:1154] Metal device set to: Apple M1 Pro\n",
-      "2024-03-20 21:15:25.654138: I metal_plugin/src/device/metal_device.cc:296] systemMemory: 16.00 GB\n",
-      "2024-03-20 21:15:25.654142: I metal_plugin/src/device/metal_device.cc:313] maxCacheSize: 5.33 GB\n",
-      "2024-03-20 21:15:25.654178: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:306] Could not identify NUMA node of platform GPU ID 0, defaulting to 0. Your kernel may not have been built with NUMA support.\n",
-      "2024-03-20 21:15:25.654196: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:272] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:0 with 0 MB memory) -> physical PluggableDevice (device: 0, name: METAL, pci bus id: <undefined>)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "\n",
-      "Epoch 1: LearningRateScheduler setting learning rate to 3.2258064516129034e-05.\n",
+      "Epoch 1: LearningRateScheduler setting learning rate to 0.0001.\n",
       "Epoch 1/10\n"
      ]
     },
@@ -74,65 +63,64 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-03-20 21:15:26.540484: W tensorflow/tsl/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n",
-      "2024-03-20 21:15:27.087398: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:114] Plugin optimizer for device_type GPU is enabled.\n"
+      "2024-03-21 18:14:17.157213: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:114] Plugin optimizer for device_type GPU is enabled.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1563/1563 [==============================] - ETA: 0s - loss: 2.0657 - accuracy: 0.5969"
+      "782/782 [==============================] - ETA: 0s - loss: 1.4087 - accuracy: 0.6070"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-03-20 21:17:41.658619: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:114] Plugin optimizer for device_type GPU is enabled.\n"
+      "2024-03-21 18:16:24.627452: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:114] Plugin optimizer for device_type GPU is enabled.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1563/1563 [==============================] - 143s 91ms/step - loss: 2.0657 - accuracy: 0.5969 - val_loss: 1.0813 - val_accuracy: 0.7998 - lr: 3.2258e-05\n",
+      "782/782 [==============================] - 135s 171ms/step - loss: 1.4087 - accuracy: 0.6070 - val_loss: 0.6359 - val_accuracy: 0.8192 - lr: 1.0000e-04\n",
       "\n",
-      "Epoch 2: LearningRateScheduler setting learning rate to 3.2258064516129034e-05.\n",
+      "Epoch 2: LearningRateScheduler setting learning rate to 0.0001.\n",
       "Epoch 2/10\n",
-      "1563/1563 [==============================] - 141s 90ms/step - loss: 1.9045 - accuracy: 0.7739 - val_loss: 3.8308 - val_accuracy: 0.7330 - lr: 3.2258e-05\n",
+      "782/782 [==============================] - 133s 170ms/step - loss: 0.6171 - accuracy: 0.8302 - val_loss: 0.5947 - val_accuracy: 0.8194 - lr: 1.0000e-04\n",
       "\n",
-      "Epoch 3: LearningRateScheduler setting learning rate to 3.2258064516129034e-05.\n",
+      "Epoch 3: LearningRateScheduler setting learning rate to 0.0001.\n",
       "Epoch 3/10\n",
-      "1563/1563 [==============================] - 141s 90ms/step - loss: 1.5923 - accuracy: 0.8184 - val_loss: 1.6739 - val_accuracy: 0.8185 - lr: 3.2258e-05\n",
+      "782/782 [==============================] - 133s 170ms/step - loss: 0.4959 - accuracy: 0.8647 - val_loss: 0.4656 - val_accuracy: 0.8631 - lr: 1.0000e-04\n",
       "\n",
-      "Epoch 4: LearningRateScheduler setting learning rate to 3.2258064516129034e-05.\n",
+      "Epoch 4: LearningRateScheduler setting learning rate to 0.0001.\n",
       "Epoch 4/10\n",
-      "1563/1563 [==============================] - 141s 90ms/step - loss: 1.1416 - accuracy: 0.8577 - val_loss: 0.9429 - val_accuracy: 0.8623 - lr: 3.2258e-05\n",
+      "782/782 [==============================] - 134s 171ms/step - loss: 0.3411 - accuracy: 0.9036 - val_loss: 0.3940 - val_accuracy: 0.8898 - lr: 1.0000e-04\n",
       "\n",
-      "Epoch 5: LearningRateScheduler setting learning rate to 3.2258064516129034e-05.\n",
+      "Epoch 5: LearningRateScheduler setting learning rate to 0.0001.\n",
       "Epoch 5/10\n",
-      "1563/1563 [==============================] - 142s 91ms/step - loss: 0.7178 - accuracy: 0.8926 - val_loss: 0.9094 - val_accuracy: 0.8632 - lr: 3.2258e-05\n",
+      "782/782 [==============================] - 132s 169ms/step - loss: 0.2304 - accuracy: 0.9314 - val_loss: 0.3488 - val_accuracy: 0.8959 - lr: 1.0000e-04\n",
       "\n",
-      "Epoch 6: LearningRateScheduler setting learning rate to 3.2258064516129034e-05.\n",
+      "Epoch 6: LearningRateScheduler setting learning rate to 0.0001.\n",
       "Epoch 6/10\n",
-      "1563/1563 [==============================] - 140s 90ms/step - loss: 0.6085 - accuracy: 0.9023 - val_loss: 0.9574 - val_accuracy: 0.8667 - lr: 3.2258e-05\n",
+      "782/782 [==============================] - 136s 173ms/step - loss: 0.1586 - accuracy: 0.9511 - val_loss: 0.3710 - val_accuracy: 0.9045 - lr: 1.0000e-04\n",
       "\n",
-      "Epoch 7: LearningRateScheduler setting learning rate to 3.2258064516129034e-05.\n",
+      "Epoch 7: LearningRateScheduler setting learning rate to 0.0001.\n",
       "Epoch 7/10\n",
-      "1563/1563 [==============================] - 142s 91ms/step - loss: 0.5331 - accuracy: 0.9159 - val_loss: 0.5762 - val_accuracy: 0.9032 - lr: 3.2258e-05\n",
+      "782/782 [==============================] - 135s 172ms/step - loss: 0.1359 - accuracy: 0.9588 - val_loss: 0.3756 - val_accuracy: 0.9079 - lr: 1.0000e-04\n",
       "\n",
-      "Epoch 8: LearningRateScheduler setting learning rate to 3.2258064516129034e-05.\n",
+      "Epoch 8: LearningRateScheduler setting learning rate to 0.0001.\n",
       "Epoch 8/10\n",
-      "1563/1563 [==============================] - 141s 90ms/step - loss: 0.4568 - accuracy: 0.9274 - val_loss: 1.2106 - val_accuracy: 0.8702 - lr: 3.2258e-05\n",
+      "782/782 [==============================] - 135s 172ms/step - loss: 0.1069 - accuracy: 0.9684 - val_loss: 0.3725 - val_accuracy: 0.9114 - lr: 1.0000e-04\n",
       "\n",
-      "Epoch 9: LearningRateScheduler setting learning rate to 3.2258064516129034e-05.\n",
+      "Epoch 9: LearningRateScheduler setting learning rate to 0.0001.\n",
       "Epoch 9/10\n",
-      "1563/1563 [==============================] - 141s 90ms/step - loss: 0.3290 - accuracy: 0.9406 - val_loss: 0.9323 - val_accuracy: 0.8837 - lr: 3.2258e-05\n",
+      "782/782 [==============================] - 134s 171ms/step - loss: 0.1234 - accuracy: 0.9644 - val_loss: 0.4706 - val_accuracy: 0.8917 - lr: 1.0000e-04\n",
       "\n",
-      "Epoch 10: LearningRateScheduler setting learning rate to 3.2258064516129034e-05.\n",
+      "Epoch 10: LearningRateScheduler setting learning rate to 0.0001.\n",
       "Epoch 10/10\n",
-      "1563/1563 [==============================] - 142s 91ms/step - loss: 0.2184 - accuracy: 0.9539 - val_loss: 0.8108 - val_accuracy: 0.8858 - lr: 3.2258e-05\n"
+      "782/782 [==============================] - 130s 166ms/step - loss: 0.0835 - accuracy: 0.9747 - val_loss: 0.3661 - val_accuracy: 0.9109 - lr: 1.0000e-04\n"
      ]
     }
    ],
@@ -175,8 +163,9 @@
     "    callback = []\n",
     "    \n",
     "    def decay(epoch):\n",
-    "        \"\"\" This method create the alpha\"\"\"\n",
-    "        return 0.001 / (1 + 1 * 30)\n",
+    "        \"\"\" This method create the alpha (learning rate)\"\"\"\n",
+    "        # return 0.001 / (1 + 1 * 30)\n",
+    "        return 0.0001\n",
     "    callback += [K.callbacks.LearningRateScheduler(decay, verbose=1)]\n",
     "    callback += [K.callbacks.ModelCheckpoint('cifar10.h5',\n",
     "                                             save_best_only=True,\n",
@@ -185,7 +174,7 @@
     "    model.compile(optimizer='adam', loss='categorical_crossentropy',\n",
     "                  metrics=['accuracy'])\n",
     "    model.fit(x=X_p, y=Y_p,\n",
-    "              batch_size=32,\n",
+    "              batch_size=64,\n",
     "              validation_data=(Xv_p, Yv_p),\n",
     "              epochs=10, shuffle=True,\n",
     "              callbacks=callback,\n",
@@ -195,68 +184,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "from keras.models import load_model\n",
     "\n",
-    "model = load_model('cifar10.h5')"
+    "model = load_model('vgg16_cifar10.h5')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  5/313 [..............................] - ETA: 5s "
+      "Model: \"sequential_2\"\n",
+      "____________________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   Trainable  \n",
+      "============================================================================\n",
+      " up_sampling2d_2 (UpSampling  (None, 64, 64, 3)        0         Y          \n",
+      " 2D)                                                                        \n",
+      "                                                                            \n",
+      " vgg16 (Functional)          (None, 512)               14714688  Y          \n",
+      "                                                                            \n",
+      " flatten_2 (Flatten)         (None, 512)               0         Y          \n",
+      "                                                                            \n",
+      " dense_6 (Dense)             (None, 512)               262656    Y          \n",
+      "                                                                            \n",
+      " dropout_4 (Dropout)         (None, 512)               0         Y          \n",
+      "                                                                            \n",
+      " dense_7 (Dense)             (None, 256)               131328    Y          \n",
+      "                                                                            \n",
+      " dropout_5 (Dropout)         (None, 256)               0         Y          \n",
+      "                                                                            \n",
+      " dense_8 (Dense)             (None, 10)                2570      Y          \n",
+      "                                                                            \n",
+      "============================================================================\n",
+      "Total params: 15,111,242\n",
+      "Trainable params: 15,111,242\n",
+      "Non-trainable params: 0\n",
+      "____________________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.summary(show_trainable=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  4/313 [..............................] - ETA: 5s "
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-03-20 21:40:15.690843: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:114] Plugin optimizer for device_type GPU is enabled.\n"
+      "2024-03-21 18:37:18.110470: I tensorflow/core/grappler/optimizers/custom_graph_optimizer_registry.cc:114] Plugin optimizer for device_type GPU is enabled.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "313/313 [==============================] - 7s 21ms/step\n",
+      "313/313 [==============================] - 7s 22ms/step\n",
       "Confusion Matrix:\n",
-      "[[926  11  16   3   2   2   1   7  26   6]\n",
-      " [  3 978   0   0   1   0   0   0   6  12]\n",
-      " [ 18   0 906  12  20  21   6  15   1   1]\n",
-      " [  7   1  31 731  23 158  15  24   8   2]\n",
-      " [  4   2  35  12 891  11   9  33   3   0]\n",
-      " [  2   0  15  42  12 898   5  24   1   1]\n",
-      " [  6   1  29  21   8  18 910   3   2   2]\n",
-      " [  5   1   7   2  15  16   0 953   1   0]\n",
-      " [ 23   7   6   0   0   1   0   3 958   2]\n",
-      " [ 13  81   0   4   1   1   0   2  17 881]]\n",
+      "[[903   5   4  14   3   0   0   5  56  10]\n",
+      " [  4 965   0   5   0   0   0   0   4  22]\n",
+      " [ 41   0 827  56  25  23   5  14   7   2]\n",
+      " [  6   2   9 898  10  50   5  13   6   1]\n",
+      " [ 11   0  21  66 848  11   3  32   8   0]\n",
+      " [  1   0   8 166  11 786   2  24   1   1]\n",
+      " [  5   0  20  58   6   2 901   2   5   1]\n",
+      " [  5   1   2  32   8   9   0 941   1   1]\n",
+      " [ 10   7   3   5   0   1   1   1 959  13]\n",
+      " [  4  47   1   6   1   0   0   2   8 931]]\n",
       "\n",
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.92      0.93      0.92      1000\n",
-      "           1       0.90      0.98      0.94      1000\n",
-      "           2       0.87      0.91      0.89      1000\n",
-      "           3       0.88      0.73      0.80      1000\n",
-      "           4       0.92      0.89      0.90      1000\n",
-      "           5       0.80      0.90      0.84      1000\n",
-      "           6       0.96      0.91      0.94      1000\n",
-      "           7       0.90      0.95      0.92      1000\n",
-      "           8       0.94      0.96      0.95      1000\n",
-      "           9       0.97      0.88      0.92      1000\n",
+      "           0       0.91      0.90      0.91      1000\n",
+      "           1       0.94      0.96      0.95      1000\n",
+      "           2       0.92      0.83      0.87      1000\n",
+      "           3       0.69      0.90      0.78      1000\n",
+      "           4       0.93      0.85      0.89      1000\n",
+      "           5       0.89      0.79      0.84      1000\n",
+      "           6       0.98      0.90      0.94      1000\n",
+      "           7       0.91      0.94      0.93      1000\n",
+      "           8       0.91      0.96      0.93      1000\n",
+      "           9       0.95      0.93      0.94      1000\n",
       "\n",
       "    accuracy                           0.90     10000\n",
-      "   macro avg       0.91      0.90      0.90     10000\n",
-      "weighted avg       0.91      0.90      0.90     10000\n",
+      "   macro avg       0.90      0.90      0.90     10000\n",
+      "weighted avg       0.90      0.90      0.90     10000\n",
       "\n"
      ]
     }
