--- a/Transfer-Learning/vgg16_cifar10.ipynb
+++ b/Transfer-Learning/vgg16_cifar10.ipynb
@@ -397,6 +397,76 @@
     "auc_roc = roc_auc_score(Yv_p, predictions)\n",
     "print(\"AUC-ROC score:\", auc_roc)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Layer 1 weights:\n",
+      "Layer 2 weights:\n",
+      "  1: (3, 3, 3, 64)\n",
+      "  2: (64,)\n",
+      "  3: (3, 3, 64, 64)\n",
+      "  4: (64,)\n",
+      "  5: (3, 3, 64, 128)\n",
+      "  6: (128,)\n",
+      "  7: (3, 3, 128, 128)\n",
+      "  8: (128,)\n",
+      "  9: (3, 3, 128, 256)\n",
+      "  10: (256,)\n",
+      "  11: (3, 3, 256, 256)\n",
+      "  12: (256,)\n",
+      "  13: (3, 3, 256, 256)\n",
+      "  14: (256,)\n",
+      "  15: (3, 3, 256, 512)\n",
+      "  16: (512,)\n",
+      "  17: (3, 3, 512, 512)\n",
+      "  18: (512,)\n",
+      "  19: (3, 3, 512, 512)\n",
+      "  20: (512,)\n",
+      "  21: (3, 3, 512, 512)\n",
+      "  22: (512,)\n",
+      "  23: (3, 3, 512, 512)\n",
+      "  24: (512,)\n",
+      "  25: (3, 3, 512, 512)\n",
+      "  26: (512,)\n",
+      "Layer 3 weights:\n",
+      "Layer 4 weights:\n",
+      "  1: (512, 512)\n",
+      "  2: (512,)\n",
+      "Layer 5 weights:\n",
+      "Layer 6 weights:\n",
+      "  1: (512, 256)\n",
+      "  2: (256,)\n",
+      "Layer 7 weights:\n",
+      "Layer 8 weights:\n",
+      "  1: (256, 10)\n",
+      "  2: (10,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Assuming 'model' is your Keras model\n",
+    "weights = []\n",
+    "\n",
+    "# Iterate through each layer in the model\n",
+    "for layer in model.layers:\n",
+    "    # Get the weights of the layer\n",
+    "    layer_weights = layer.get_weights()\n",
+    "    # Append the weights to the list\n",
+    "    weights.append(layer_weights)\n",
+    "\n",
+    "# Print the weights\n",
+    "for i, layer_weights in enumerate(weights):\n",
+    "    print(f\"Layer {i+1} weights:\")\n",
+    "    for j, w in enumerate(layer_weights):\n",
+    "        print(f\"  {j+1}: {w.shape}\")"
+   ]
   }
  ],
  "metadata": {
